css/main.css
#Zelda {
	display: none;
}

#Muppets {
	display: none;
}

#Daytona {
	display: none;
}

#KungFuPanda {
	display: none;
}

#SegaRally {
	display: none;
}

#Office {
	display: none;
}

#Youtube {
	display: none;
}

#MassEffect {
	display: none;
}

#DukeNukem {
	display: none;
}

#CastlevaniaSOTN {
	display: none;
}

#Twitch {
	display: none;
}

/* The sidebar menu */
.sidenav {
	height: 100%; /* Full-height: remove this if you want "auto" height */
	width: 180px; /* Set the width of the sidebar */
	position: fixed; /* Fixed Sidebar (stay in place on scroll) */
	z-index: 1; /* Stay on top */
	top: 0; /* Stay at the top */
	left: 0;
	background-color: #932432; /* Black */
	overflow-x: hidden; /* Disable horizontal scroll */
	padding-top: 20px;
  }
  
  /* The navigation menu links */
  .sidenav a {
	padding: 6px 8px 6px 16px;
	text-decoration: none;
	font-size: 25px;
	color: #b954f8;
	display: block;
  }
  
  /* When you mouse over the navigation links, change their color */
  .sidenav a:hover {
	color: #f1f1f1;
  }

.sidenav img {
    width:160px;
	height:auto;
}
  
body {
	margin-left: 180px; /* Same as the width of the sidebar */
    padding: 0px 10px;
	display: flex;
	flex-direction: column;
	color: #fff;
	background-color: #f86754;
	background: linear-gradient(180deg, #283747 0%, #3C1874 100%);
	background-repeat: no-repeat;
	background-size: 100%, 100%;
}


h1, h2 {
	color: #fdfd96;
	text-shadow: 2px 2px #699;
}

main {
	flex:1;
	padding:40px;
	background: linear-gradient(180deg, #283747 0%, #3C1874 100%);
	background-repeat: no-repeat;
	background-size: 100%, 100%;
}

h2 {
	border-bottom: 2px solid #5483f8;
	padding-bottom: 3px;
	font-size: 20px;
}

header {
	align-items: center;
	justify-content: center;
}
pre {
    display: inline-block;
    margin: 0;
    padding: 4px;
    font-family: "Consolas", serif;
    font-size: 16px;
    font-weight:500;
    color: aqua;
    background: rgba(0,0,0,0.7);
    cursor: pointer;
}

pre:hover {
    background: #466;
}

pre:active {
    background: #699;
}

